--- a/cal.html
+++ b/cal.html
@@ -14,7 +14,7 @@
       justify-content: center;
       height: 100vh;;
       margin: 0;
-      background-color: rgb(117, 71, 38);
+      background-color:white rgb(117, 71, 38);
     }
 
     #calculator {
@@ -22,7 +22,7 @@
       border-radius: 8px;
       padding: 70px;
       box-shadow: 0 0 10px rgba(65, 6, 25, 0.78);
-      background-image: url(cal.img);
+      
     }
 
     input {
